feat: Added configureCells function
This function configure the cells user interaction.
When clicked or clicked and the mouse moved the cell
is filled by a randomic grayscaled color.

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,9 +78,10 @@ body {
 
 .cell {
   flex: 1 auto;
-  outline: 1px solid lightgray;
+  border: 1px solid lightgray;
 }
 
 .cell:hover {
-  filter: brightness(80%);
+  z-index: 1;
+  filter: brightness(40%);
 }
